// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article Summary tests on Android should render an ArticleSummaryContent component with a AST 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#696969",
      "flexWrap": "wrap",
      "fontFamily": "TimesDigitalW04",
      "fontSize": 14,
      "lineHeight": 20,
      "marginBottom": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    
    Victoria
    ...
  </Text>
</Text>
`;

exports[`Article Summary tests on Android should render an ArticleSummaryContent component with a blank AST 1`] = `null`;

exports[`Article Summary tests on Android should render an ArticleSummaryContent component with two paragraphs 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#696969",
      "flexWrap": "wrap",
      "fontFamily": "TimesDigitalW04",
      "fontSize": 14,
      "lineHeight": 20,
      "marginBottom": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    
    The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
     
    Mali sniffed out explosives and insurgents during a gunfight that lasted seven and a half hours to help a team of Special Boat Service (SBS) operators hunt down and kill more than a dozen.
    ...
  </Text>
</Text>
`;

exports[`Article Summary tests on Android should render an ArticleSummaryHeadline component with a blank AST 1`] = `
<Text
  accessibilityRole="heading"
  accessible={true}
  allowFontScaling={true}
  aria-level="3"
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#333333",
      "fontFamily": "TimesModern-Bold",
      "fontSize": 22,
      "fontWeight": "400",
      "lineHeight": 22,
      "marginBottom": 5,
    }
  }
>
  Example headline
</Text>
`;

exports[`Article Summary tests on Android should render an article-summary component with a single paragraph 1`] = `
<View>
  <View
    style={
      Object {
        "marginBottom": 5,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 1.2,
          "marginBottom": -4,
          "paddingTop": 5,
        }
      }
    >
      C A M I L L A   L O N G
    </Text>
  </View>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="3"
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "400",
        "lineHeight": 22,
        "marginBottom": 5,
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </Text>
  </Text>
  <Text
    accessibilityLabel="datePublication"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "marginBottom": 5,
      }
    }
    testID="datePublication"
  >
    Friday November 17 2017, 12:01am, The Times
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "marginBottom": 5,
      }
    }
  >
    <Text
      accessibilityRole="link"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      href="/profile/camilla-long"
      onPress={[Function]}
      style={
        Object {
          "color": "#006699",
          "textDecorationLine": "underline",
        }
      }
    >
      Camilla Long
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      , Environment Editor
    </Text>
  </Text>
</View>
`;

exports[`Article Summary tests on Android should render an article-summary component with content including line breaks 1`] = `
<View>
  <View
    style={
      Object {
        "marginBottom": 5,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 1.2,
          "marginBottom": -4,
          "paddingTop": 5,
        }
      }
    >
      C A M I L L A   L O N G
    </Text>
  </View>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="3"
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "400",
        "lineHeight": 22,
        "marginBottom": 5,
      }
    }
  >
    OK, so Putin’s not a lady, but he does have the wildest man‑PMT
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        Victoria
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        

      </Text>
      ITV
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        

      </Text>
      ★★★★☆
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
       
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        Lucy Worsley’s Nights at the Opera
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        

      </Text>
      BBC Two
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        

      </Text>
      ★★★☆☆
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
       
      Poor old Harriet, Duchess of Sutherland. There she was giddily expecting a
      ...
    </Text>
  </Text>
  <Text
    accessibilityLabel="datePublication"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "marginBottom": 5,
      }
    }
    testID="datePublication"
  >
    Saturday July 01 2017, 03:32pm, The Sunday Times
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "marginBottom": 5,
      }
    }
  >
    <Text
      accessibilityRole="link"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      href="/profile/camilla-long"
      onPress={[Function]}
      style={
        Object {
          "color": "#006699",
          "textDecorationLine": "underline",
        }
      }
    >
      Camilla Long
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      , Environment Editor
    </Text>
  </Text>
</View>
`;

exports[`Article Summary tests on Android should render an article-summary component with empty content at the end trimmed 1`] = `
<View>
  <View
    style={
      Object {
        "marginBottom": 5,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 1.2,
          "marginBottom": -4,
          "paddingTop": 5,
        }
      }
    >
      C A M I L L A   L O N G
    </Text>
  </View>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="3"
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "400",
        "lineHeight": 22,
        "marginBottom": 5,
      }
    }
  >
    OK, so Putin’s not a lady, but he does have the wildest man‑PMT
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      
      Sally Jones, one of the world’s most wanted terrorists, has been killed in a US drone strike in Syria, it was revealed last night.
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
       
      The former punk
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
       
      ...
    </Text>
  </Text>
  <Text
    accessibilityLabel="datePublication"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "marginBottom": 5,
      }
    }
    testID="datePublication"
  >
    Saturday July 01 2017, 03:32pm, The Sunday Times
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "marginBottom": 5,
      }
    }
  >
    <Text
      accessibilityRole="link"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      href="/profile/camilla-long"
      onPress={[Function]}
      style={
        Object {
          "color": "#006699",
          "textDecorationLine": "underline",
        }
      }
    >
      Camilla Long
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      , Environment Editor
    </Text>
  </Text>
</View>
`;

exports[`Article Summary tests on Android should render an article-summary component with headline and blank content 1`] = `
<View>
  <View
    style={
      Object {
        "marginBottom": 5,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 1.2,
          "marginBottom": -4,
          "paddingTop": 5,
        }
      }
    >
      C A M I L L A   L O N G
    </Text>
  </View>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="3"
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "400",
        "lineHeight": 22,
        "marginBottom": 5,
      }
    }
  >
    OK, so Putin’s not a lady, but he does have the wildest man‑PMT
  </Text>
  <Text
    accessibilityLabel="datePublication"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "marginBottom": 5,
      }
    }
    testID="datePublication"
  >
    Saturday July 01 2017, 03:32pm, The Sunday Times
  </Text>
</View>
`;

exports[`Article Summary tests on Android should render an article-summary component with headline and no content 1`] = `
<View>
  <View
    style={
      Object {
        "marginBottom": 5,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 1.2,
          "marginBottom": -4,
          "paddingTop": 5,
        }
      }
    >
      C A M I L L A   L O N G
    </Text>
  </View>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="3"
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "400",
        "lineHeight": 22,
        "marginBottom": 5,
      }
    }
  >
    OK, so Putin’s not a lady, but he does have the wildest man‑PMT
  </Text>
  <Text
    accessibilityLabel="datePublication"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "marginBottom": 5,
      }
    }
    testID="datePublication"
  >
    Saturday July 01 2017, 03:32pm, The Sunday Times
  </Text>
</View>
`;

exports[`Article Summary tests on Android should render an article-summary component with multiple paragraphs 1`] = `
<View>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="3"
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "400",
        "lineHeight": 22,
        "marginBottom": 5,
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
       
      Mali sniffed out explosives and insurgents during a gunfight that lasted seven and a half hours to help a team of Special Boat Service (SBS) operators hunt down and kill more than a dozen
      ...
    </Text>
  </Text>
  <Text
    accessibilityLabel="datePublication"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "marginBottom": 5,
      }
    }
    testID="datePublication"
  >
    Friday November 17 2017, 12:01am, The Times
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "marginBottom": 5,
      }
    }
  >
    <Text
      accessibilityRole="link"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      href="/profile/camilla-long"
      onPress={[Function]}
      style={
        Object {
          "color": "#006699",
          "textDecorationLine": "underline",
        }
      }
    >
      Camilla Long
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      , Environment Editor
    </Text>
  </Text>
</View>
`;

exports[`Article Summary tests on Android should render an article-summary component with no byline 1`] = `
<View>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="3"
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "400",
        "lineHeight": 22,
        "marginBottom": 5,
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </Text>
  </Text>
  <Text
    accessibilityLabel="datePublication"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "marginBottom": 5,
      }
    }
    testID="datePublication"
  >
    Friday November 17 2017, 12:01am, The Times
  </Text>
</View>
`;

exports[`Article Summary tests on Android should render an article-summary component with no date publication 1`] = `
<View>
  <View
    style={
      Object {
        "marginBottom": 5,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 1.2,
          "marginBottom": -4,
          "paddingTop": 5,
        }
      }
    >
      C A M I L L A   L O N G
    </Text>
  </View>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="3"
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "400",
        "lineHeight": 22,
        "marginBottom": 5,
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </Text>
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "marginBottom": 5,
      }
    }
  >
    <Text
      accessibilityRole="link"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      href="/profile/camilla-long"
      onPress={[Function]}
      style={
        Object {
          "color": "#006699",
          "textDecorationLine": "underline",
        }
      }
    >
      Camilla Long
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      , Environment Editor
    </Text>
  </Text>
</View>
`;

exports[`Article Summary tests on Android should render an article-summary component with no headline 1`] = `
<View>
  <View
    style={
      Object {
        "marginBottom": 5,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 1.2,
          "marginBottom": -4,
          "paddingTop": 5,
        }
      }
    >
      C A M I L L A   L O N G
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </Text>
  </Text>
  <Text
    accessibilityLabel="datePublication"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "marginBottom": 5,
      }
    }
    testID="datePublication"
  >
    Saturday July 01 2017, 03:32pm, The Sunday Times
  </Text>
</View>
`;

exports[`Article Summary tests on Android should render an article-summary component with no label 1`] = `
<View>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="3"
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "400",
        "lineHeight": 22,
        "marginBottom": 5,
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </Text>
  </Text>
  <Text
    accessibilityLabel="datePublication"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "marginBottom": 5,
      }
    }
    testID="datePublication"
  >
    Friday November 17 2017, 12:01am, The Times
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "marginBottom": 5,
      }
    }
  >
    <Text
      accessibilityRole="link"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      href="/profile/camilla-long"
      onPress={[Function]}
      style={
        Object {
          "color": "#006699",
          "textDecorationLine": "underline",
        }
      }
    >
      Camilla Long
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      , Environment Editor
    </Text>
  </Text>
</View>
`;

exports[`Article Summary tests on Android should render an article-summary with opinion byline 1`] = `
<View>
  <View
    style={
      Object {
        "marginBottom": 5,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 1.2,
          "marginBottom": -4,
          "paddingTop": 5,
        }
      }
    >
      C A M I L L A   L O N G
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#850029",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "400",
      }
    }
  >
    <Text
      accessibilityRole="link"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      href="/profile/camilla-long"
      onPress={[Function]}
      style={
        Object {
          "color": "#006699",
          "textDecorationLine": "underline",
        }
      }
    >
      Camilla Long
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      , Environment Editor
    </Text>
  </Text>
  <Text
    accessibilityRole="heading"
    accessible={true}
    allowFontScaling={true}
    aria-level="3"
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "400",
        "lineHeight": 22,
        "marginBottom": 5,
      }
    }
  >
    Top medal for forces dog who took a bite out of the Taliban
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "flexWrap": "wrap",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      
      The special forces dog fought on under fire, even after shrapnel from Taliban grenades tore into his belly and legs, blew out a front tooth and damaged his right ear.
      ...
    </Text>
  </Text>
  <Text
    accessibilityLabel="datePublication"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "marginBottom": 5,
      }
    }
    testID="datePublication"
  >
    Friday November 17 2017, 12:01am, The Times
  </Text>
</View>
`;
